--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="stylesheets/main.css">
   <link rel="shortcut icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cyber Citadel</title>
+  <title>Alien Invasion</title>
 </head>
 
 <body>
-  <h1 style="text-transform: uppercase;font-size: 54px;padding-top:0.7em;margin-top:0">Welcome to my site.</h1>
+  <h1 style="text-transform: uppercase;font-size: 54px;padding-top:0.7em;margin-top:0">Welcome to Alien Invasion.</h1>
   <iframe src="player.html" style="width:396px;height:264px;margin:0 auto;display:block;"></iframe>
   <p>Click to play.</p>
   <p>Default controls are:</p>
@@ -21,7 +21,20 @@
     Right Shoulder: S<br />
     Start: Enter<br />
     Select: Backspace<br />
-    D-Pad: Arrow Keys
+    D-Pad: Arrow Keys<br />
+    <br />
+    Button Controls:<br />
+    A -> shoot lasers<br />
+    D-Pad -> move<br />
+    <br />
+    Navigate State Machine:<br />
+    Press START to move between pages and pause the game<br />
+    <br />
+    How To Play:<br />
+This is a survival game. The objective is to take out as many invading aliens as you can. Use the 'X' button<br />
+to shoot a laser in the same direction you're traveling. If you run into an enemey, accidently shoot your planet,<br />
+crash into the planet, or let an invader past your defenses, you will lose a life. During the game, powerups will appear on the screen.<br />
+Golden stars give the player a speed boost. Purple stars give the player an extra life. Survive for as long as possible.
   </p>
 </body>
 </html>
